try do start applicaton in docker